--- a/css/custom.css
+++ b/css/custom.css
@@ -19,6 +19,34 @@
   background: #008080 !important;
 }
 
+
+
+
+.bg-Aorange {
+  /* background: #fff8df !important; */
+  background: #e47911 !important;
+}
+
+.bg-AlightBlue {
+  background: #48a3c6 !important;
+}
+
+.bg-AdarkBlue {
+  /* background: #fff8df !important; */
+  background: #007eb9 !important;
+}
+
+.bg-Ablack {
+  background: #111111 !important;
+}
+
+.bg-AnavyBlue {
+  /* background: #fff8df !important; */
+  background: #37475a !important;
+}
+
+
+
 .text-rosybrown {
   color: rgb(26, 24, 24);
   font-weight: 00;
